# deepSearchDemoRAG

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
configs/: models.yaml  settings.yaml
scripts/: compare_retrieval_modes.py  docvqa_rag_benchmark.py  download_models.py  full_pipeline_benchmark.py  verify_setup.py
src/: defaults.py
src/benchmark/: embedding_benchmark.py  system_metrics.py
src/core/: __init__.py  llm.py  retrieval.py
src/embeddings/: __init__.py  clip_encoder.py  encoder.py  openvino_encoder.py
src/index/: __init__.py  faiss_index.py
src/ingestion/: __init__.py  loader.py  normalizer.py
src/llm/: __init__.py  ollama_client.py  openvino_llm.py
src/ocr/: __init__.py  engine.py  paddle_engine.py  tesseract_engine.py
src/openvino/: __init__.py  device_manager.py  model_converter.py  ov_llm.py
src/processing/: __init__.py  documentNormalizer.py  textChunker.py  videoProcessing.py
src/retrieval/: __init__.py  metadata_filter.py  multimodal_retriever.py  query_router.py  retriever.py
src/runtime/: __init__.py  edge_profile.py
src/tools/: __init__.py  embeddingBenchmarking.py  llmBenchmarking.py
src/utils/: __init__.py  latencyMonitoring.py  performanceFallback.py
src/video/: __init__.py  audio_extractor.py  frame_captioner.py  frame_ocr.py  frame_sampler.py  transcription.py  video_document_builder.py
