[project]
name = "deep-search-assistant"
version = "1.0.0"
description = "Multimodal RAG with OpenVINO-optimized local inference"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
